@@ -6,6 +6,7 @@ ver 0.20.13 (not yet released)
 * database
   - simple: don't purge mount points on update/rescan
   - simple: fix "mount" bug caused by bad compiler optimization
+  - simple: fix "lsinfo" into mount points
   - upnp: work around libupnp 1.6.24 API breakage
 * queue: fix spuriously misplaced prioritized songs
 * include Windows cross-build script in source tarball
